# hikari-atsume

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Readme.md  mypy.ini  notes_for_tanjun.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  validate-release.yml
atsume/: __init__.py  __version__.py  bot.py  utils.py
atsume/alembic/: __main__.py  cli.py  config.py  exceptions.py
atsume/alembic/template/: env.py  script.py.mako
atsume/cli/: __init__.py  base.py  component.py  project.py
atsume/command/: __init__.py  annotations.py  client.py  context.py  model.py
atsume/component/: __init__.py  component.py  component_config.py  context.py  decorators.py  manager.py
atsume/component/template/: commands.py  models.py
atsume/db/: __init__.py  manager.py  models.py
atsume/discord/: __init__.py
atsume/extensions/: __init__.py  aiohttp.py  loader.py  timer.py
atsume/middleware/: __init__.py  aiohttp.py  loader.py
atsume/mypy/: __init__.py  main.py  settings.py
atsume/permissions/: __init__.py  base.py  settings_permissions.py
atsume/settings/: __init__.py  default_settings.py  type_hints.py
atsume/templates/: __init__.py
atsume/templates/component/: apps.py.template  models.py
atsume/templates/project/: manage.py
atsume/templates/templates/component/component_name/: apps.py  commands.py  models.py
atsume/templates/templates/project/: manage.py
atsume/templates/templates/project/project_name/: local.py  settings.py
atsume/utils/: __init__.py  interactions.py
beatrice/: manage.py
beatrice/basic/: apps.py  commands.py
beatrice/bot/: settings.py
beatrice/splatgear2/: apps.py  commands.py  models.py
docs/: appendix.md  conf.py  index.md  index.rst
docs/_templates/python/: class.rst  module.rst
docs/appendix/: add_bot_to_guild.md  debug_mode.md  speedups.md
docs/atsume_reference/: database.md  migrations.md  mypy.md  timer.md
docs/tutorial/: index.md  tutorial_1.md  tutorial_2.md  tutorial_3.md  tutorial_4.md  tutorial_5.md
examples/hi_bot/: manage.py
examples/hi_bot/basic/: apps.py  commands.py  models.py
examples/hi_bot/basic/migrations/: 0000_create_hicounter.py
examples/hi_bot/my_bot/: local.py  settings.py
